# frizzle-phone

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  dev  justfile  lefthook.yml  main.py  pyproject.toml  vulture_whitelist.py
.claude/skills/rfc-sip-lookup/: SKILL.md  rfc-index.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: labeler.yml  release.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yaml  copilot-setup-steps.yml  docker.yaml  labeler.yml
docs/: METRICS.md  dave-protocol.md  grafana-dashboard.json
docs/plans/: 2026-03-05-discord-voice-rx-design.md  2026-03-05-discord-voice-rx-plan.md  2026-03-05-e2e-test-harness-design.md  2026-03-05-e2e-test-harness-plan.md
migrations/: 0001_schema.sql  0002_extensions_and_calls.sql
rfcs/: download.sh
scripts/: packaging-test.sh  sip_smoke_client.py  smoke-test.sh
src/frizzle_phone/: __main__.py  agc.py  audio_utils.py  bot.py  bridge.py  bridge_manager.py  bridge_stats.py  database.py  discord_patches.py  metrics.py  phone_cog.py  synth.py  voice_connector.py  voice_protocols.py  web.py
src/frizzle_phone/discord_voice_rx/: __init__.py  client.py  decoder.py  decrypt.py  gateway.py  rtp.py  stats.py
src/frizzle_phone/rtp/: pcmu.py  receive.py  stream.py
src/frizzle_phone/sip/: README.md  call.py  message.py  sdp.py  server.py  transaction.py
src/frizzle_phone/templates/: extensions.html
tests/: audio_helpers.py  conftest.py  fake_voice.py  rtp_helpers.py  test_agc.py  test_audio_golden.py  test_bot.py  test_bridge.py  test_bridge_manager.py  test_bridge_stats.py  test_database.py  test_discord_patches.py  test_e2e_audio.py  test_e2e_bridge.py  test_e2e_multi_speaker.py  test_e2e_sip.py  test_fake_voice.py  test_metrics.py  test_pcmu.py  test_phone_cog.py  test_rtp_receive.py  test_rtp_send_loop.py  test_rtp_stream.py  test_sdp.py  test_sip_message.py  test_sip_server.py  test_synth.py  test_transaction.py  test_voice_protocols.py  test_voice_rx_client.py  test_voice_rx_decoder.py  test_voice_rx_decrypt.py  test_voice_rx_gateway.py  test_voice_rx_rtp.py  test_voice_rx_stats.py  test_web.py
