[project]
name = "frizzle-phone"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "discord-py>=2.6.4",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frizzle_phone"]

[dependency-groups]
dev = [
    "lefthook>=2.0.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.14.10",
    "squawk-cli>=2.36.0",
    "ty>=0.0.8",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_unit_test.py"]
addopts = "--cov=frizzle_phone --cov-report=term-missing:skip-covered --cov-report=xml"

[tool.coverage.run]
source = ["frizzle_phone"]
branch = true
omit = ["*_unit_test.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ty.src]
exclude = ["vulture_whitelist.py"]

[tool.vulture]
paths = ["src/frizzle_phone/"]
min_confidence = 90
ignore_names = ["clean_user_state"]
exclude = ["*_unit_test.py", "*_image_test.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    "FA",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
