[project]
name = "frizzle-phone"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11",
    "aiohttp-jinja2>=1.6",
    "aiosqlite>=0.20.0",
    "discord-py[voice]>=2.7.0",
    "discord-ext-voice-recv==0.5.2a179",
    "python-dotenv>=1.2.1",
    "soxr>=0.5.0",
]

[project.scripts]
frizzle-phone = "frizzle_phone.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frizzle_phone"]

[dependency-groups]
dev = [
    "lefthook>=2.0.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
    "vulture>=2.14",
    "pytest-regressions>=2.5",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_unit_test.py"]
addopts = "--cov=frizzle_phone --cov-report=term-missing:skip-covered --cov-report=xml"

[tool.coverage.run]
source = ["frizzle_phone"]
branch = true
omit = ["*_unit_test.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ty.src]
exclude = ["vulture_whitelist.py"]

[tool.vulture]
paths = ["src/frizzle_phone/", "tests/", "vulture_whitelist.py"]
min_confidence = 60
ignore_names = ["clean_user_state", "datagram_received", "connection_made", "connection_lost", "error_received", "header_values", "event_loop", "FakeTransport", "sendto", "seeded_db", "voice_channels", "get_transport", "is_opus", "cleanup", "wants_opus", "write", "row_factory", "rtp_send_loop", "_bot", "on_voice_state_update", "hangup_by_voice_channel", "get_bridged_calls", "cog_load", "cog_unload"]
exclude = ["*_unit_test.py", "*_image_test.py"]

[tool.ruff]
exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    "FA",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
